# failtale-uyuni

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/uyuni/: config.yaml  test_failure.txt  test_report.txt
knowledge/: user_preference.txt
src/failtale/: crew.py  main.py
src/failtale/config/: agents.yaml  tasks.yaml
src/failtale/tools/: __init__.py  custom_tools.py
